[package]
name = "kitsune"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", default-features = false, features = ["compress-brotli", "compress-gzip", "cookies", "macros"] }
async-graphql = { version = "7.0.17", default-features = false }
async-graphql-actix-web = "7.0.17"
color-eyre = "0.6.5"
eyre = "0.6.12"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
