[package]
name = "http-signatures"

edition = "2024"
version = "0.1.0"

[[bench]]
name = "build_cavage_signature_string"
harness = false

[[bench]]
name = "parse_cavage_header"
harness = false

[dependencies]

blowocking = { workspace = true, optional = true }


tracing = { workspace = true, optional = true }

[dev-dependencies]


[features]
default = ["easy"]
easy = ["dep:blowocking", "dep:tracing"]

[lints]
workspace = true
